style.css
html, #flex-container {
	margin: 0;
	padding: 0;
}

body {
	margin: 0 auto;
	padding: 0;
	max-width: 85%;
	font-family: Ariel, sans-serif;
	position: relative;
}

#flex-container {
	display: flex;
	-webkit-flex-direction: row;
  	-webkit-flex-wrap: wrap;
}

/***************** NAVIGATION STYLING ******************/

#header {
	width: 100%;
	position: fixed;
}

.border {
	border: 2px solid black;
}

.navigation {
/*/*	margin-top: 1em;*/
	margin-right: 15%;
}

#nav {
	list-style-type: none;
	text-align: left;
  	padding: 20px 9px;
  	margin: auto 0;
  	background-color: #FFB4B0;
  }

#nav li {
	padding: 0 .2em;
  	width: 45px;
 	text-align: left;
  	display: inline;
}


/***************** #SIDEBAR STYLING ******************/

#sidebar {
	flex-grow: 1;
	background-color: #4DD7FA;
	box-sizing: border-box;
	width: 220px;
}

#sidebar, #song-list {
	margin-top: 5em;
}

#filter-form {
	margin: 1em 1em;
}

#filter-form label, #filter-form select {
	margin: 4px 0 7px 0;
	padding-top: 10px;
}

#filter-form select, #filter-form label, #container {
	display: block;
}

#container {
	margin: 15px 0 0 0;
	text-align: center;
}




/***************** SONG LIST STYLING ******************/

#song-list {
	flex-grow: 10;
	box-sizing: border-box;
	width: 300px;
	margin-left: 1em;
}

#song-list container {
	margin: auto 0;
}

#song-list h2 {
	color: #785616;
	margin: 0;
	padding: .4em 0 0 1em;
}

#song-list container p {
	padding: 1em;
	margin: 0;
}

container div:nth-child(2n+0) {
	background: #FFF5EE;
}

container div:nth-child(2n+1) {
	background: #F5FFFA;
}

